--- a/src/main/resources/templates/usr/post/create.html
+++ b/src/main/resources/templates/usr/post/create.html
@@ -13,6 +13,16 @@
                 <input class="input input-bordered w-full ml-[10px]" autocomplete="off"
                        placeholder="제목을 입력해주세요." name="title" type="text">
             </div>
+            <div class="detail__board flex items-center h-[50px] pb-[10px] border-b">
+                <span class="badge w-[100px]">
+                    게시판
+                </span>
+                <select class="select select-bordered w-full ml-[10px]" name="board">
+                    <option value="free">자유게시판</option>
+                    <option value="interview">면접정보게시판</option>
+                    <option value="etc">기타게시판</option>
+                </select>
+            </div>
             <div class="detail__body flex flex-col min-h-[400px] mt-[10px]">
                 <span class="badge w-[100px]">
                     내 용
@@ -20,7 +30,6 @@
                 <textarea class="textarea textarea-bordered flex-grow mt-[10px]" autocomplete="off"
                           placeholder="내용을 입력해주세요." name="content" type="text"></textarea>
             </div>
-        </div>
         <div class="btns flex justify-end gap-x-[10px]">
             <button class="btn btn-primary" type="submit">작성</button>
             <a class="btn btn-secondary" href="/post/list">리스트</a>
