--- a/src/main/resources/templates/usr/post/edit.html
+++ b/src/main/resources/templates/usr/post/edit.html
@@ -25,7 +25,7 @@
     </div>
     <div class="btns flex justify-end gap-x-[10px]">
       <button class="btn btn-primary" type="submit">수정</button>
-      <a class="btn btn-secondary" href="/post/view/{id}(id=${post.id})">취소</a>
+      <a class="btn btn-secondary" th:href="@{|/post/view/${post.id}|}">취소</a>
     </div>
   </form>
 </div>
