--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -70,8 +70,9 @@
     <h2>댓글</h2>
     <ul>
       <li th:each="comment : ${comments}">
-        <p th:text="${comment.content}"></p>
-        <p th:text="${comment.member.nickname}"></p>
+        <span th:text="${comment.content}"></span>
+        <span th:text="${#temporals.format(comment.createdTime, 'yy-MM-dd HH:mm')}"></span>
+        <span th:text="${comment.member.nickname}"></span>
 
         <!-- 댓글 수정 버튼 -->
         <a href="#" onclick="showEditForm(event, 'commentForm-${comment.id}')">수정</a>
