chore: 게시글 링크 추가

--- a/src/main/resources/templates/usr/home/fragment/index/note.html
+++ b/src/main/resources/templates/usr/home/fragment/index/note.html
@@ -1,7 +1,7 @@
 <div th:fragment="note" class="flex flex-col gap-7 mb-12">
 
     <div class="card w-80 bg-base-100 shadow-xl">
-
+        <a th:href="@{/post/view/7}"  id="link1" class="">
         <figure>
             <img src="/images/note/001.png"/>
         </figure>
@@ -20,6 +20,7 @@
                 <div class="badge badge-outline">Products</div>
             </div>
         </div>
+        </a>
     </div>
 
     <div class="card w-80 bg-base-100 shadow-xl">
