--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -34,3 +34,10 @@ html > body {
     height: 50%;
     object-fit: cover;
 }
+
+.truncate-text {
+    white-space: nowrap; /* 줄 바꿈 방지 */
+    overflow: hidden; /* 넘치는 부분 감춤 */
+    text-overflow: ellipsis; /* 넘치는 부분에 ... 표시 */
+    max-width: 100px; /* 텍스트 영역의 최대 너비 설정 */
+}
