--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -111,12 +111,11 @@
                 <span>게시판</span>
             </li>
             <li><a href="/member/myPostList">내가 쓴 게시글</a></li>
-            <li><a>내가 쓴 답글</a></li>
+            <li><a href="/member/myCommentList">내가 쓴 답글</a></li>
             <li class="menu-title mt-3">
                 <span>통계</span>
             </li>
             <li><a href="/member/graph/point">포인트 변동 그래프</a></li>
-            <li><a>Item 2</a></li>
         </ul>
     </div>
 
