design: 메인페이지 컨탠츠 업데이트

--- a/src/main/resources/templates/usr/home/fragment/index/play.html
+++ b/src/main/resources/templates/usr/home/fragment/index/play.html
@@ -2,7 +2,7 @@
      th:if="${@rq.login}"
      class="carousel w-full max-w-md min-h-24">
 
-    <a href="/member/underlinedQuestionList"
+    <a href="/underline/function"
        id="item1" class="carousel-item w-full flex justify-center">
 
         <div class="stats shadow w-80">
