--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -2,69 +2,76 @@
 <head>
   <title>게시물 상세 보기</title>
   <style>
-    .post-details {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      text-align: left;
-    }
+    /*.post-details {*/
+    /*  display: flex;*/
+    /*  flex-direction: column;*/
+    /*  align-items: flex-start;*/
+    /*  max-width: 800px;*/
+    /*  margin: 0 auto;*/
+    /*  padding: 20px;*/
+    /*  text-align: left;*/
+    /*}*/
 
-    .post-title {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
+    /*.post-title {*/
+    /*  font-size: 24px;*/
+    /*  font-weight: bold;*/
+    /*  margin-bottom: 10px;*/
+    /*}*/
 
-    .post-created {
-      font-size: 14px;
-      color: #888;
-      margin-bottom: 20px;
-    }
+    /*.post-created {*/
+    /*  font-size: 14px;*/
+    /*  color: #888;*/
+    /*  margin-bottom: 20px;*/
+    /*}*/
 
-    .post-content {
-      text-align: left;
-    }
+    /*.post-content {*/
+    /*  text-align: left;*/
+    /*}*/
 
-    .btn-container {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 20px;
-    }
+    /*.btn-container {*/
+    /*  display: flex;*/
+    /*  justify-content: flex-end;*/
+    /*  margin-top: 20px;*/
+    /*}*/
 
-    .btn-container .btn {
-      margin-left: 10px;
-    }
+    /*.btn-container .btn {*/
+    /*  margin-left: 10px;*/
+    /*}*/
 
-    .comment-form {
-      margin-top: 20px;
-    }
+    /*.comment-form {*/
+    /*  margin-top: 20px;*/
+    /*}*/
 
-    .comment-form textarea {
-      width: 100%;
-      height: 100px;
-      margin-bottom: 10px;
-    }
+    /*.comment-form textarea {*/
+    /*  width: 100%;*/
+    /*  height: 100px;*/
+    /*  margin-bottom: 10px;*/
+    /*}*/
   </style>
 </head>
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
-  <div class="post-details">
+  <div class="article-write__box p-[10px]">
+    <div class="btn-container flex gap-2">
+      <a th:href="@{/post/edit/{id}(id=${post.id})}" class="btn btn-ghost">
+        <i class="fa-sharp fa-solid fa-pen mr-1"></i>
+        수정</a>
+      <form th:action="@{/post/delete/{postId}(postId=${post.id})}" method="post" id="deleteForm" onsubmit="return confirmDelete()">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="hidden" name="_csrf" value="${_csrf.token}">
+        <button type="submit" class="btn btn-ghost" onclick="return confirmDelete()">
+          <i class="fa-sharp fa-solid fa-trash-can mr-1"></i>
+          삭제</button>
+      </form>
+      <a href="/post/list" class="btn btn-ghost">
+        <i class="fa-sharp fa-solid fa-arrow-rotate-left mr-1"></i>
+        돌아가기</a>
+      </div>
     <h1 class="post-title" th:text="${post.title}"></h1>
     <p class="post-created" th:text="${#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
     <p class="text-gray-500" th:text="${post.member.nickname}"></p>
     <p class="post-content" th:text="${post.content}"></p>
-    <div class="btn-container">
-      <a th:href="@{/post/edit/{id}(id=${post.id})}" class="btn btn-primary">수정</a>
-      <form th:action="@{/post/delete/{postId}(postId=${post.id})}" method="post" id="deleteForm" onsubmit="return confirmDelete()">
-        <input type="hidden" name="_method" value="DELETE">
-        <input type="hidden" name="_csrf" value="${_csrf.token}">
-        <button type="submit" class="btn btn-error" onclick="return confirmDelete()">삭제</button>
-      </form>
-      <a href="/post/list" class="btn btn-primary">목록으로 돌아가기</a>
     </div>
-  </div>
+
 
   <div class="comment-list">
     <h2>댓글</h2>
@@ -102,6 +109,7 @@
       <textarea name="content" placeholder="댓글을 입력하세요" class="textarea textarea-bordered textarea-md w-full max-w-xs"></textarea>
       <button type="submit" class="btn btn-primary">댓글 작성</button>
     </form>
+  </div>
   </div>
 
   <script>
