chore: Integer로 수정 (#120)
* fix: 충돌 해결

* feat: PostService 작업

* feat: create.html 작업

* feat: list.html 작업

* feat: PostController 추가

* refactor: Community, Post 전면 재 수정

* fix: 게시글 작성시 발생하는 403에러 해결

* feat: 게시글 삭제 기능 구현

* chore: 에러 확인용

* fix: 게시글 작성 안되는 에러 해결

* feat: 게시글 수정 기능 추가

* feat: InitData로 초기 게시글 작성

* feat: 게시글 글번호가 큰 것부터 내림차순으로 정렬

* refactor: Rq, RsData 도입

* refactor: community 코드 수정

* chore: 매핑 중복 수정

* feat: 게시판 페이징 기능 추가

* fix: 페이지 끝에서도 '>'작동하는 오류 해결

* fix: list에서 작성자 보이게끔 수정

* chore: list에서 작성일자 제거

* feat: 댓글 작성 기능 구현

* chore: 외래키 관련 에러 발생

* feat: 댓글 삭제 기능 구현

* feat: 댓글 수정 기능 구현

* chore: 작성자 nickname으로 출력

* feat: 조회수 증가 기능 구현

* feat: 다중 게시판기능 일부 구현

* chore: 게시판 선택 위치 조절

* fix: 게시글 수정을 취소하면 발생하던 ã 에러 수정

* feat: 자신이 작성한 게시글, 댓글만 수정 삭제가 가능하도록 구현

* refactor: ADMIN은 모든 댓글 삭제권한 가지도록 설정

* chore: Post, Comment에 findByMemberId 추가

* refactor: ADMIN은 모든 글 삭제권한 가지도록 설정

* feat: 검색기능 구현

* feat: 게시물에 댓ê¸의 댓글 개수 표시

* chore: 게시글 링크 추가

* chore: Integer로 수정

* chore: 충돌 해결

* chore: 중복 해결

--- a/src/main/resources/templates/usr/home/fragment/index/note.html
+++ b/src/main/resources/templates/usr/home/fragment/index/note.html
@@ -1,7 +1,7 @@
 <div th:fragment="note" class="flex flex-col gap-7 mb-12">
 
-    <a href="/post/view/7"
-       class="card w-80 bg-base-100 shadow-xl">
+    <div class="card w-80 bg-base-100 shadow-xl">
+        <a th:href="@{/post/view/7}"  id="link1" class="">
         <figure>
             <img src="/images/note/001.png"/>
         </figure>
@@ -18,7 +18,10 @@
             <div class="card-actions justify-end">
             </div>
         </div>
-    </a>
+        </a>
+    </div>
+
+    <div class="card w-80 bg-base-100 shadow-xl">
 
     <a href="/question/function"
         class="card w-80 mb-12 bg-base-100 shadow-xl">
@@ -41,4 +44,5 @@
             </div>
         </div>
     </a>
+</div>
 </div>
