design: 전반적인 디자인 수정

--- a/src/main/resources/templates/usr/post/create.html
+++ b/src/main/resources/templates/usr/post/create.html
@@ -1,35 +1,66 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <title>게시물 추가</title>
+    <style>
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .form-input {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .form-input .badge {
+            flex-basis: 100px;
+            margin-right: 10px;
+        }
+
+        .form-input .input,
+        .form-input .select,
+        .form-input .textarea {
+            flex-grow: 1;
+        }
+
+        .btns {
+            margin-top: 20px;
+        }
+
+        .btns button,
+        .btns a {
+            margin-left: 10px;
+        }
+    </style>
 </head>
-<div layout:fragment="content" className="min-h-screen flex flex-col items-center gap-12">
-    <form th:action="@{/post/create}" method="post">
-        <div class="article-write__box p-[10px]">
-            <div class="detail__title flex items-center h-[50px] pb-[10px] border-b">
-                <span class="badge w-[100px]">
-                    제 목
-                </span>
-                <input class="input input-bordered w-full ml-[10px]" autocomplete="off"
-                       placeholder="제목을 입력해주세요." name="title" type="text">
-            </div>
-            <div class="detail__board flex items-center h-[50px] pb-[10px] border-b">
-                <span class="badge w-[100px]">
-                    게시판
-                </span>
-                <select class="select select-bordered w-full ml-[10px]" name="board">
-                    <option value="free">자유게시판</option>
-                    <option value="interview">면접정보게시판</option>
-                    <option value="etc">기타게시판</option>
-                </select>
-            </div>
-            <div class="detail__body flex flex-col min-h-[400px] mt-[10px]">
-                <span class="badge w-[100px]">
-                    내 용
-                </span>
-                <textarea class="textarea textarea-bordered flex-grow mt-[10px]" autocomplete="off"
-                          placeholder="내용을 입력해주세요." name="content" type="text"></textarea>
-            </div>
-        <div class="btns flex justify-end gap-x-[10px]">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
+    <form th:action="@{/post/create}" method="post" class="container">
+        <div class="form-input">
+            <span class="badge">
+                제 목
+            </span>
+            <input class="input input-bordered" autocomplete="off" placeholder="제목을 입력해주세요." name="title" type="text">
+        </div>
+        <div class="form-input">
+            <span class="badge">
+                게시판
+            </span>
+            <select class="select select-bordered" name="board">
+                <option value="free">자유게시판</option>
+                <option value="interview">면접정보게시판</option>
+                <option value="etc">기타게시판</option>
+            </select>
+        </div>
+        <div class="form-input">
+            <span class="badge">
+                내 용
+            </span>
+            <textarea class="textarea textarea-bordered flex-grow" autocomplete="off" placeholder="내용을 입력해주세요." name="content" type="text"></textarea>
+        </div>
+        <div class="btns">
             <button class="btn btn-primary" type="submit">작성</button>
             <a class="btn btn-secondary" href="/post/list">리스트</a>
         </div>
