delete: 대량 등록 method 에서 answer 관련 로직 삭제

--- a/src/main/resources/templates/usr/question/fragment/detail/underline.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/underline.html
@@ -14,7 +14,8 @@
               method="post" class="mt-5 mb-5 flex flex-col">
 
             <select class="select select-bordered select-sm w-full max-w-xs"
-                  th:field="">
+                    th:object="${}"
+                    th:field="">
                 <option th:value="0">기본 문제집</option>
                 <option th:each=""
                         th:value=""
