feat: books 모델에 전달

--- a/src/main/resources/templates/usr/question/fragment/detail/underline.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/underline.html
@@ -1,4 +1,4 @@
-<span th:fragment="underline(question)"
+<span th:fragment="underline(question, books)"
       th:if="${@rq.login}">
     <label for="my-modal-6"><i class="fa-solid fa-highlighter"></i></label>
 
