--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -1,4 +1,4 @@
-<div th:fragment="nav(tags, question)"
+<div th:fragment="nav(tags, question, books)"
      class="mb-12 flex flex-col gap-5">
 
     <div class="flex justify-center mt-5">
@@ -11,7 +11,7 @@
         <a th:href="@{/question/list/{id}(id=${question.category.id})}">
             <i class="fa-solid fa-chevron-left"></i></a>
 
-        <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question})}"></span>
+        <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question}, ${books})}"></span>
 
 
         <a th:if="${question.type.toString() ne 'MCQ'}"
