--- a/src/main/resources/templates/usr/question/fragment/detail/underline.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/underline.html
@@ -1,4 +1,4 @@
-<span th:fragment="underline(question, books)"
+<span th:fragment="underline(question, underlineCreateForm, books)"
       th:if="${@rq.login}">
     <label for="my-modal-6"><i class="fa-solid fa-highlighter"></i></label>
 
@@ -14,12 +14,14 @@
               method="post" class="mt-5 mb-5 flex flex-col">
 
             <select class="select select-bordered select-sm w-full max-w-xs"
-                    th:object="${}"
-                    th:field="">
-                <option th:value="0">기본 문제집</option>
-                <option th:each=""
-                        th:value=""
-                        th:text=""></option>
+                    th:field="${underlineCreateForm.bookId}">
+
+                <option th:if="${books.size eq 0}"
+                        th:value="0">문제집 생성</option>
+
+                <option th:each="book : ${books}"
+                        th:value="${book.id}"
+                        th:text="${book.name}"></option>
             </select>
 
             <textarea name="about" placeholder="오답노트"
