--- a/src/main/resources/templates/usr/answer/check/fragment/valid.html
+++ b/src/main/resources/templates/usr/answer/check/fragment/valid.html
@@ -1,26 +1,11 @@
 <script th:fragment="valid">
     function JoinForm__submit(form) {
         //-- content 검증 --//
-        form.word1.value = form.word1.value.trim();
+        form.keyword.value = form.keyword.value.trim();
 
-        if(form.word1.value.length == 0){
-            toastWarning("정답 단어1 입력은 필수입니다.");
-            form.word1.focus();
-            return;
-        }
-
-        form.word2.value = form.word2.value.trim();
-
-        if(form.word2.value.length == 0){
-            toastWarning("정답 단어2 입력은 필수입니다.");
-            form.word2.focus();
-            return;
-        }
-
-        form.word3.value = form.word3.value.trim();
-        if(form.word3.value.length == 0){
-            toastWarning("정답 단어3 입력은 필수입니다.");
-            form.word3.focus();
+        if(form.keyword.value.length == 0){
+            toastWarning("정답 키워드는 필수입니다.");
+            form.keyword.focus();
             return;
         }
 
