refactor: 밑줄문제 상세페이지 컨트롤러 로직 수정 / 삭제 기능 수정

--- a/src/main/resources/templates/usr/book/fragment/list/table.html
+++ b/src/main/resources/templates/usr/book/fragment/list/table.html
@@ -11,15 +11,15 @@
 
     <td>
       <a th:text="*{name}"
-         th:href="@{/question/list/{id}(id=*{id})}"></a>
+         th:href="@{/underline/book/{id}(id=*{id})}"></a>
     </td>
     <td class="grow">
       <a class="w-full"
-         th:href="@{/question/list/{id}(id=*{id})}"></a>
+         th:href="@{/underline/book/{id}(id=*{id})}"></a>
     </td>
     <td>
       <a th:text="|*{underlines.size} 문제|"
-         th:href="@{/question/list/{id}(id=*{id})}"></a>
+         th:href="@{/underline/book/{id}(id=*{id})}"></a>
     </td>
   </tr>
   </tbody>
