design: 홈 화면 업데이트

--- a/src/main/resources/templates/usr/home/fragment/index/login.html
+++ b/src/main/resources/templates/usr/home/fragment/index/login.html
@@ -1,5 +1,5 @@
 <div th:fragment="login"
-     th:if="${@rq.logout}" class="max-w-md h-24">
+     th:if="${@rq.logout}" class="max-w-md h-24 mt-5">
   <div class="stats shadow w-80 h-full">
     <div class="stat place-items-center">
       <div class="text-sm mb-2">로그인 하고 문제 풀기</div>
