--- a/src/main/resources/templates/usr/home/fragment/index/books.html
+++ b/src/main/resources/templates/usr/home/fragment/index/books.html
@@ -7,7 +7,7 @@
         <a th:if="${books.size > 0}"
            th:each="book : ${books}"
            th:href="@{/underline/book/{id}(id=${book.id})}"
-           class="carousel-item w-64 flex justify-center mr-10">
+           class="carousel-item w-64 flex justify-집center mr-10">
 
             <div class="stats shadow w-64">
                 <div class="stat place-items-center">
@@ -46,7 +46,7 @@
         </a>
 
         <a th:if="${books.size eq 0}"
-           href="#"
+           href="/book/create"
            class="carousel-item w-80 flex justify-center">
 
             <div class="stats shadow w-80 flex">
